--- a/container/web/static/webapp/partials/status_card.html
+++ b/container/web/static/webapp/partials/status_card.html
@@ -7,6 +7,12 @@
             </button>
         </div>
 
+        <div class="card-remove-array card-edit-array-btn">
+            <button type="button" class="btn" aria-label="Edit FlashArray" data-toggle="modal" data-target="#modalEditArray" ng-click="setupArrayEdit(flasharray)">
+              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+            </button>
+        </div>
+
         <div class="card-remove-array card-remove-array-btn">
             <button type="button" class="btn" aria-label="Delete FlashArray" ng-click="deleteArray(flasharray.id)">
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
